--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
+    "ng2-search-filter": "^0.5.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
