--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/android-permissions": "^6.2.0",
+    "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
     "@capacitor/android": "^4.5.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "^4.3.0",
@@ -27,8 +29,11 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-android-permissions": "^1.1.5",
+    "express": "^4.18.2",
     "ionicons": "^6.0.3",
     "ng2-search-filter": "^0.5.1",
+    "ng2-validation": "^4.2.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
