--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "angular": "^1.8.3",
+    "angular-datatables": "^14.0.0",
     "cordova-plugin-android-permissions": "^1.1.5",
+    "datatables": "^1.10.18",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "express": "^4.18.2",
     "ionicons": "^6.0.3",
+    "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
     "ng2-validation": "^4.2.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
@@ -52,8 +58,10 @@
     "@angular/language-service": "^14.0.0",
     "@capacitor/cli": "4.3.0",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
