--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/android-permissions": "^6.2.0",
     "@awesome-cordova-plugins/barcode-scanner": "^6.2.0",
+    "@awesome-cordova-plugins/call-number": "^6.2.0",
     "@capacitor/android": "^4.5.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "^4.3.0",
@@ -31,6 +32,7 @@
     "@ionic/angular": "^6.1.9",
     "angular": "^1.8.3",
     "angular-datatables": "^14.0.0",
+    "call-number": "^1.0.1",
     "cordova-plugin-android-permissions": "^1.1.5",
     "datatables": "^1.10.18",
     "datatables.net": "^1.11.3",
